@@ -1,5 +1,5 @@
 ; ****************************************************************************
-; * COPYRIGHT (C) 2003 James Yonan                                           *
+; * COPYRIGHT (C) 2003-2004 James Yonan                                      *
 ; *  This program is free software; you can redistribute it and/or modify    *
 ; *  it under the terms of the GNU General Public License as published by    *
 ; *  the Free Software Foundation; either version 2 of the License, or       *
