@@ -1,12 +1,14 @@
 OpenVPN
 Copyright (C) 2002-2004 James Yonan <jim@yonan.net>
 
-$Id: ChangeLog,v 1.93 2004/02/04 18:49:01 jimyonan Exp $
+$Id: ChangeLog,v 1.94 2004/02/05 21:52:32 jimyonan Exp $
 
 2004.02.xx -- Version 1.6-beta6
 
 * UDP over Socks5 fix to accomodate Socks5 encapsulation
   overhead (Christof Meerwald).
+* Minor --ip-win32 dynamic tweaks (use long lease time,
+  invalidate existing lease with DHCPNAK).
 
 2004.02.01 -- Version 1.6-beta5
 
